@@ -9,6 +9,20 @@ import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.Map;
 
+
+/**
+ * Title: RequestParserVo 参数转换 Object 对象实现 转换器, http 表单请求,参数继承对象
+ * @author Joven.wang
+ * date   2019-10-18 12:35:25
+ * @version V1.0
+ *  <pre>
+ * 修改记录
+ *    修改后版本:     修改人：  修改日期:     修改内容:
+ * </pre>
+ * Description: (说明) http请求头参数VO类
+ * Copyright: (c) 2018 gc by https://www.suven.top
+ *
+ */
 public class RequestParserVo  implements IRequestVo, Serializable {
 
 
@@ -45,7 +59,7 @@ public class RequestParserVo  implements IRequestVo, Serializable {
         }
         T header = null;
         try{
-            header = clazz.newInstance();
+            header = clazz.getDeclaredConstructor().newInstance();
             Field[] fields = FieldUtils.getAllFields(clazz);
             for (Field field : fields) {
                 try {
